--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <html lang="en">
 <head>
-  <title>John Doe</title>
+  <title>Tianyi Ren</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -65,13 +65,13 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
-                <p><b>john at doe.com</b><br>
-                <p>Random Department<br>
-                University of Randomness<br>
-                Street<br>
-                City <br>
-                Country<br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Tianyi Ren</b></div><br>
+                <p><b>Postdoctoral Researcher</b><br>
+                <p>Mechanical Engineering Department<br>
+                University of Washington<br>
+                616 NE Northlake Pl<br>
+                Seattle, WA, 98115 <br>
+                US<br>
                 </p>
             </div>
             
