--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		  <ul class="nav navbar-nav">
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="#">Projects</a></li>
-				  <li><a href="#publication.html">Publications</a></li> 
+				  <li><a href="publication.html">Publications</a></li> 
           <li><a href="CV_tianyi.pdf" target="_blank">CV</a></li>
 		  </ul>
 		</div>
