--- a/publication.html
+++ b/publication.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!DOCTYPE html>
+    <html lang="en">
     <head>
-        <title>Tianyi Ren</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
-      </head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My Research Publications</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 20px;
+                padding: 0;
+                background-color: #f4f4f4;
+            }
+            h1 {
+                color: #333;
+            }
+            .publication {
+                margin-bottom: 20px;
+                padding: 10px;
+                background-color: #fff;
+                border: 1px solid #ddd;
+                border-radius: 5px;
+            }
+            .publication h2 {
+                margin-top: 0;
+                font-size: 1.2em;
+            }
+            .publication p {
+                margin: 5px 0;
+            }
+        </style>
+    </head>
 <body>
 
 <!-- Navigation -->
@@ -27,7 +50,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="publication.html">Projects</a></li>
                 <li><a href="publication.html">Publications</a></li> 
         <li><a href="CV_tianyi.pdf" target="_blank">CV</a></li>
         </ul>
@@ -35,7 +58,7 @@
     </div>
   </nav>
 
-  
+
     <h1>My Research Journal Publications</h1>
 
     <div class="publication">
