--- a/Projects.html
+++ b/Projects.html
@@ -47,8 +47,9 @@
                 <strong>The full list can be found in <a href="https://scholar.google.com/citations?user=_E3zJtEAAAAJ&hl=en">Google Scholar</a></strong><br/>
 
                 <ul>
-                <li class="paper" words="DRAFT">         <a id="DRAFT" href="../papers/symRI.pdf">[DRAFT] Locality Analysis by Synthesizing Symbolic Reuse Intervals [PDF]</a> <br>
-                                                            <u>Dong Chen</u></li>
+                <li class="paper" words="MIDL2024">         <a id="DRAFT" href="../papers/symRI.pdf">Re-DiffiNet: Modeling discrepancies in tumor
+                    segmentation using diffusion models</a> <br>
+                                                            <u>Tianyi Ren</u></li>
                 </ul>
 
                 <ul>
