--- a/Projects.html
+++ b/Projects.html
@@ -47,15 +47,14 @@
                 <strong>The full list can be found in <a href="https://scholar.google.com/citations?user=_E3zJtEAAAAJ&hl=en">Google Scholar</a></strong><br/>
 
                 <ul>
-                <li class="paper" words="MIDL2024">         <a id="DRAFT" href="../papers/symRI.pdf">Re-DiffiNet: Modeling discrepancies in tumor
+                <li class="paper" words="MIDL2024">         <a id="MIDL2024" href="../papers/symRI.pdf">Re-DiffiNet: Modeling discrepancies in tumor
                     segmentation using diffusion models</a> <br>
                                                             <u>Tianyi Ren</u></li>
                 </ul>
 
                 <ul>
-                <li class="paper" words="TACO21">         <a id="TACO21" href="#">[TACO'21] CARL: Compiler Assigned Reference Leasing</a> <br>
-                                                                                Chen Ding, <u>Dong Chen</u>, Fangzhou Liu, Benjamin Raber, and Wesley Smith<br>
-                                                                                ACM Transactions on Architecture and Code Optimization</li>
+                <li class="paper" words="MIDL2024">         <a id="MIDL2024" href="#">[MIDL2024] Improving Glioma Segmentation in Low-Resolution Domains
+                    with Transfer Learning</li>
                 </ul>
 
                 <ul>
