--- a/Projects.html
+++ b/Projects.html
@@ -53,7 +53,9 @@
                 </ul>
 
                 <ul>
-                <li class="paper" words="MIDL2024">         <a id="MIDL2024" href="#">[MIDL2024] Improving Glioma Segmentation in Low-Resolution Domains
+                <li class="paper" words="MIDL2024">         <a id="MIDL2024" href="#">[MIDL2024] Improving Glioma Segmentation in Low-Resolution Domains</a> <br>
+                    <u>Dong Chen</u>, Chen Ding, Fangzhou Liu, Benjamin Raber, Wesley Smith, and Pengcheng Li<br>
+                    2021 ACM SIGPLAN International Symposium on Memory Management
                     with Transfer Learning</li>
                 </ul>
 
