--- a/Projects.html
+++ b/Projects.html
@@ -61,66 +61,32 @@
           <u>Dong Chen</u>, Chen Ding, Fangzhou Liu, Benjamin Raber, Wesley Smith, and Pengcheng Li<br>
           2021 ACM SIGPLAN International Symposium on Memory Management
         </li>
-        <li class="paper" words="ISMM21">
-          <a id="ISMM21" href="https://dl.acm.org/doi/10.1145/3459898.3463908" target="_blank">[ISMM'21] Uniform Lease vs LRU Cache: Analysis and Evaluation</a> <br>
-          <u>Dong Chen</u>, Chen Ding, Fangzhou Liu, Benjamin Raber, Wesley Smith, and Pengcheng Li<br>
-          2021 ACM SIGPLAN International Symposium on Memory Management
-        </li>
-        <li class="paper" words="MEMSYS20">
-          <a id="MEMSYS20" href="https://dl.acm.org/doi/10.1145/3422575.3422800" target="_blank">[MEMSYS'20] CLAM: Compiler Lease of Cache Memory</a> <br>
-          Ian Prechtl, Ben Reber, Chen Ding, Dorin Patru, <u>Dong Chen</u><br>
-          The 6th International Symposium on Memory Systems
-        </li>
-        <li class="paper" words="PPoPP20">
-          <a id="PPOPP20" href="https://dl.acm.org/doi/abs/10.1145/3332466.3374510" target="_blank">[PPoPP'20-poster] PLUM: static parallel program locality analysis under uniform multiplexing</a> <br>
-          Fangzhou Liu, <u>Dong Chen</u>, Wesley Smith, Chen Ding<br>
-          The 25th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming
-        </li>
-        <li class="paper" words="LCPC'19">
-          <a id="LCPC19" href="https://link.springer.com/chapter/10.1007/978-3-030-72789-5_7" target="_blank">[LCPC'19] CLAM: Compiler Leasing of Accelerator Memory</a> <br>
-          Chen Ding, <u>Dong Chen</u>, Dorin Patru<br>
-          The 32nd Workshop on Languages and Compilers for Parallel Computing
-        </li>
-        <li class="paper" words="MEMSYS'19">
-          <a id="MEMSYS19" href="https://dl.acm.org/doi/10.1145/3357526.3357557" target="_blank">[MEMSYS'19] Statistical Caching for Near Memory Management</a> <br>
-          <u>Dong Chen</u>, Fangzhou Liu, Mingyang Jiao, Chen Ding, Sreepathi Pai<br>
-          The 5th International Symposium on Memory Systems
-        </li>
-        <li class="paper" words="PLDI'18">
-          <a id="PLDI18" href="https://dl.acm.org/doi/10.1145/3192366.3192402" target="_blank">[PLDI'18] Locality Analysis through Static Parallel Sampling</a> <br>
-          <u>Dong Chen</u>, Fangzhou Liu, Chen Ding, Sreepathi Pai<br>
-          The 39th ACM SIGPLAN Conference on Programming Language Design and Implementation
-        </li>
-        <li class="paper" words="LCPC'17">
-          <a id="LCPC17" href="https://link.springer.com/book/10.1007/978-3-030-35225-7" target="_blank">[LCPC'17] POSTER: Static Reuse Time Analysis Using Dependence Distance</a> <br>
-          <u>Dong Chen</u>, Fangzhou Liu, Chen Ding, Chucheow Lim<br>
-          The 30th International Workshop on Languages and Compilers for Parallel Computing
-        </li>
-        <li class="paper" words="TACO'17">
-          <a id="TACO17" href="https://dl.acm.org/doi/10.1145/3134437" target="_blank">[TACO'17] Cache Exclusivity and Sharing: Theory and Optimization</a> <br>
-          Chencheng Ye, Chen Ding, Hao Luo, Jacob Brock, <u>Dong Chen</u>, Hai Jin<br>
-          ACM Transactions on Architecture and Code Optimization
-        </li>
-        <li class="paper" words="TACO'17">
-          <a id="TACO17" href="https://dl.acm.org/doi/10.1145/3046678" target="_blank">[TACO'17] LD: Low-Overhead GPU Race Detection Without Access Monitoring</a> <br>
-          Pengcheng Li, Xiaoyu Hu, <u>Dong Chen</u>, Jacob Brock, Hao Luo, Eddy Z Zhang, Chen Ding<br>
-          ACM Transactions on Architecture and Code Optimization
-        </li>
-        <li class="paper" words="MEMSYS'16">
-          <a id="MEMSYS16" href="https://dl.acm.org/doi/10.1145/2989081.2989119" target="_blank">[MEMSYS'16] Write Locality and Optimization for Persistent Memory</a> <br>
-          <u>Dong Chen</u>, Chencheng Ye, Chen Ding<br>
-          The 2nd International Symposium on Memory Systems
-        </li>
-        <li class="paper" words="Euro-Par'14">
-          <a id="EUROPAR14" href="https://link.springer.com/chapter/10.1007/978-3-319-09873-9_18" target="_blank">[Euro-Par'14] Automated Transformation of GPU-Specific OpenCL Kernels Targeting Performance Portability on Multi-Core/Many-Core CPUs</a> <br>
-          Dafei Huang, Mei Wen, Changqing Xun, <u>Dong Chen</u>, Xing Cai, Yuran Qiao, Nan Wu, Chunyuan Zhang<br>
-          The 20th International European Conference on Parallel and Distributed Computing
-        </li>
-        <li class="paper" words="HPCC'13">
-          <a id="HPCC13" href="https://ieeexplore.ieee.org/document/6825555" target="_blank">[HPCC'13] Automatic mapping single-device OpenCL program to heterogeneous multi-device platform</a> <br>
-          <u>Dong Chen</u>, Changqing Xun, Dafei Huang, Mei Wen, Chunyuan Zhang<br>
-          The 15th International Conference on High Performance Computing and Communications
-        </li>
+
+        <li class="paper" data-words="NeuroimageClinical2024">
+            Abderezaei J., Pionteck A., Chuang Y., Carrasquilla A., Bilgili G., <u>Ren T.</u>, et al., 
+            <i>Increased Hindbrain Motion in Chiari I Malformation Patients Measured Through 3D Amplified MRI (3D aMRI)</i>,
+            <i>Neuroimage Clinical (2024) (Under review).</i>
+          </li>
+          <li class="paper" data-words="JOrthopRes2024">
+            <u>Ren T.</u>, Inglis B., Salim D., Dailey HL., 
+            <a href="https://pubmed.ncbi.nlm.nih.gov/38491964/">Torsion Constants and Virtual Mechanical Tests are Valid Image-Based Surrogate Measures of Ovine Fracture Healing</a>,
+            <i>Journal of Orthopaedic Research (2024).</i>
+          </li>
+          <li class="paper" data-words="BiomechModelMechbio2022">
+            <u>Ren T.</u>, Klein K., Brigitte R., Salim D., Dailey HL.,
+            <a href="https://doi.org/10.1007/s10237-021-01553-2">Image-based radiodensity profilometry measures early remodeling at the bone-callus interface in sheep</a>,
+            <i>Biomechanics and Modeling in Mechanobiology (2022).</i>
+          </li>
+          <li class="paper" data-words="JBiomech2021">
+            <u>Ren T.</u>*, Schwarzenberg P.*, Klein K., Brigitte R., Salim D., Dailey HL.,
+            <a href="https://doi.org/10.1016/j.jbiomech.2021.110300">Domain-independent simulation of physiologically relevant callus shape in mechanoregulated models of fracture healing</a>,
+            <i>Journal of Biomechanics (2021).</i>
+          </li>
+          <li class="paper" data-words="BiomechModelMechbio2020">
+            <u>Ren T.</u>, Dailey HL.,
+            <a href="https://doi.org/10.1007/s10237-020-01340-5">Mechanoregulation modeling of bone healing in realistic fracture geometries</a>,
+            <i>Biomechanics and Modeling in Mechanobiology (2020).</i>
+          </li>
       </ul>
     </div>
   </div>
