--- a/publication.html
+++ b/publication.html
@@ -39,22 +39,22 @@
       <ul>
         <li class="paper" words="MIDL2024">
           <a id="MIDL2024" href="https://arxiv.org/abs/2402.07354" target="_blank">Re-DiffiNet: Modeling discrepancies in tumor segmentation using diffusion models</a> <br>
-          <u>Tianyi Ren</u>, Kurt M.<br>
+          <u>Ren T.</u>, Kurt M.<br>
           <i>Medical Imaging with Deep Learning (MIDL 2024)</i>
         </li>
         <li class="paper" words="MIDL2024">
           <a id="MIDL2024" href="https://openreview.net/pdf?id=JyZKi38kv2" target="_blank">Improving Glioma Segmentation in Low-Resolution Domains with Transfer Learning</a> <br>
-          Rivera J., Rebala H., <u>Tianyi Ren</u>, Kurt M., Sharma A.<br>
+          Rivera J., Rebala H., <u>Ren T.</u>, Kurt M., Sharma A.<br>
           <i>Medical Imaging with Deep Learning (MIDL 2024)</i>
         </li>
         <li class="paper" words="MICCAI2023">
           <a id="MICCAI2023" href="https://arxiv.org/abs/2402.07008" target="_blank">An Optimization Framework for Processing and Transfer Learning for the BraTS 2023 Cluster of Challenges</a> <br>
-          <u>Tianyi Ren</u>, Kurt M.<br>
+          <u>Ren T.</u>, Kurt M.<br>
           <i>International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2023)</i>
         </li>
         <li class="paper" words="MIDL2024">
           <a id="MIDL2024" href="../papers/symRI.pdf" target="_blank">Re-DiffiNet: Modeling discrepancies in tumor segmentation using diffusion models</a> <br>
-          <u>Tianyi Ren</u>
+          <u>Ren T.</u>
         </li>
         <li class="paper" words="MIDL2024">
           <a id="MIDL2024" href="#" target="_blank">[MIDL2024] Improving Glioma Segmentation in Low-Resolution Domains with Transfer Learning</a> <br>
