updates in tree

--- a/publication.html
+++ b/publication.html
@@ -20,11 +20,10 @@
 <nav class="navbar navbar-inverse">
   <div class="container">
     <ul class="nav navbar-nav">
-      <li><a href="../index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="projects.html">Projects</a></li>
-      <li><a>Publications</a></li>
-      <li><a href="fun.html">Fun</a></li>
-      <li><a href="../files/cv_dchen.pdf">CV</a></li>
+      <li><a href="publication.html">Publications</a></li>
+      <li><a href="CV_tianyi.pdf">CV</a></li>
     </ul>
   </div>
 </nav>
@@ -52,16 +51,6 @@
           <u>Ren T.</u>, Kurt M.<br>
           <i>International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2023)</i>
         </li>
-        <li class="paper" words="MIDL2024">
-          <a id="MIDL2024" href="../papers/symRI.pdf" target="_blank">Re-DiffiNet: Modeling discrepancies in tumor segmentation using diffusion models</a> <br>
-          <u>Ren T.</u>
-        </li>
-        <li class="paper" words="MIDL2024">
-          <a id="MIDL2024" href="#" target="_blank">[MIDL2024] Improving Glioma Segmentation in Low-Resolution Domains with Transfer Learning</a> <br>
-          <u>Dong Chen</u>, Chen Ding, Fangzhou Liu, Benjamin Raber, Wesley Smith, and Pengcheng Li<br>
-          2021 ACM SIGPLAN International Symposium on Memory Management
-        </li>
-
         <li class="paper" data-words="NeuroimageClinical2024">
             Abderezaei J., Pionteck A., Chuang Y., Carrasquilla A., Bilgili G., <u>Ren T.</u>, et al., 
             <i>Increased Hindbrain Motion in Chiari I Malformation Patients Measured Through 3D Amplified MRI (3D aMRI)</i>,
